@@ -1,0 +1,19 @@
+SHELL = /bin/sh
+PREFIX=
+bindir = $(PREFIX)/bin
+
+all: ctmValidator.pl
+
+rttmValidator.pl:
+	chmod +x ctmValidator.pl
+
+check: all
+	(cd test_suite; $(SHELL) RunTest.sh ../ctmValidator.pl)
+
+install: all
+	cp ctmValidator.pl $(bindir)
+
+clean:
+
+distclean: clean
+	rm -r *~ makefile
