@@ -1,0 +1,38 @@
+;; just few comments
+ AIT_20061020B_A 1 1.260 0.24 IT    0.988394 lex AIT_20061020B_A_1
+;; white space not good
+AIT_20061020B_A 1 1.560 0.51 0.999867 lex AIT_20061020B_A_1
+;; 7 fields not good
+AIT_2006102-0B_A 1 2.070 0.40 I'M  0.311002 lex AIT_20061020B_A_1
+AIT_2006102-0B_A 1 2 0 F-  0 frag aIT_2006102-0b_A_1
+;; it's ok 
+path/AIT_20061020B_A 1 2.810 0.37 PUSHING 0.938964 lex AIT_20061020B_A_1
+;; path is not part of the spec read it!
+AIT_20061020B_A.sph 1 3.180 0.34 AND 0.372955 lex AIT_20061020B_A_1
+;; no file extension in the spec either
+AIT_20061020B_A 1 begtime 0.15 I 0.768236 lex AIT_20061020B_A_1
+;; begin time must be a float
+AIT_20061020B_A 1 3.670 durtime DON'T 0.713541 lex AIT_20061020B_A_1
+;; duration time must be a float
+AIT_20061020B_A 1 4.260 0.29 know 0.757874 lex AIT_20061020B_A_1
+AIT_20061020B_A 1 5.280 0.35 %K22Bh} 0.988814 lex AIT_20061020B_A_1
+;; prenonce this word if you can, not a regular token
+AIT_20061020B_A 1 12.810 0.37 PUSHING 0.938964 lex AIT_20061020B_A_1
+AIT_20061020B_A 1 13.180 0.34 AND 0.372955     frag AIT_20061020B_A_1
+AIT_20061020B_A 1 13.520 0.15 I 0.768236       fp AIT_20061020B_A_1
+AIT_20061020B_A 1 13.670 0.19 DON'T 0.713541   un-lex AIT_20061020B_A_1
+AIT_20061020B_A 1 14.260 0.29 KNOW 0.757874    for-lex AIT_20061020B_A_1
+AIT_20061020B_A 1 15.280 0.35 I 0.988814       misc AIT_20061020B_A_1
+AIT_20061020B_A 1 15.280 0.35 I 0.988814       noscore AIT_20061020B_A_1
+;; good types
+AIT_20061020B_A 1 22.810 0.37 PUSHING oNe lex AIT_20061020B_A_1
+;; oNe is not a float
+AIT_20061020B_A 1 23.180 0.34 AND 0.372955     null AIT_20061020B_A_1
+;; null is not a known type
+AIT_20061020B_A 1 23.520 0.15 I 0.768236       super-lex AIT_20061020B_A_1
+;; sper-lex either!
+AIT_20061020B_A 1 23.670 0.19 DON'T 0.713541   un-lex Ar_20061020-B_A_1
+AIT_20061020B_A 1 24.260 0.29 KNOW 0.757874    for-lex Jon's_officemate
+;; no apostrophe is the speaker
+AIT_20061020B_A 1 25.280 0.35 I 0.988814       misc AIT_20061020B_A_1
+AIT_20061020B_A 1 25.280 0.35 I 0.988814       noscore AIT_20061020B_A_1
